# bsuite-mcp-monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  auth.example.toml  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
bs/: __init__.py  auth_config.py  auth_intake.py  cli.py  config.py
bs/collectors/: __init__.py  auth.py  common.py  cpu.py  dashboard.py  disk.py  doctor.py  enrichment.py  fan.py  geo.py  host.py  mcp.py  memory.py  network.py  network_detail.py  power.py  processes.py  result.py  security.py  ssh.py  ssh_monitoring.py  status.py  thermal.py
bs/render/: __init__.py  auth.py  dashboard.py  doctor.py  fan.py  mcp.py  network.py  security.py  ssh.py
deploy/: bs-fan.service.example
docs/: README.md  auth-health.md  command-reference.md  configuration.md  doctor-security.md  fan-controller.md  generate_screenshots.py  mcp-monitoring.md  network-monitoring.md
