[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bsuite-mcp-monitor"
version = "0.2.0"
description = "Lightweight Linux dashboards for MCP server, proxy, and tunnel health"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Bohol Digital"}]
keywords = ["mcp", "monitoring", "linux", "observability", "terminal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "geoip2>=5.2",
  "rich>=13.7",
]

[project.scripts]
bs = "bs.cli:main"

[project.urls]
Homepage = "https://github.com/bohodigital/bsuite-mcp-monitor"
Issues = "https://github.com/bohodigital/bsuite-mcp-monitor/issues"

[tool.setuptools]
packages = ["bs", "bs.collectors", "bs.render"]
